changed css on header - position: fixed, z-index: 1 - so that header stays above background + body

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -28,12 +28,11 @@
 
 
 .body {
-  margin:0px;
+  padding-top: 100%;
   background-color: hsla(0, 0%, 0%, 0.75);
   justify-content: center;
   text-align: center;
   position: fixed;
-  height: auto;
   width: 100%;
   bottom: 0;
   left: 0;
