--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,8 +1,17 @@
+a, a:link, a:visited, a:focus, a:hover, a:active{
+  color: white;
+  text-decoration:none;
+  cursor: pointer;
+}
+
+
 #headercontainer {
+  position: fixed;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin: 0px;
+  z-index: 1;
 
 }
 
@@ -35,6 +44,7 @@
   text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
                0px 8px 13px rgba(0,0,0,0.1),
                0px 18px 23px rgba(0,0,0,0.1);
+
 }
 
 
